[package]
name = "ts2mp4"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ts2mp4"
path = "src/main.rs"
