[package]
name = "ts2mp4"
version = "0.1.2"
edition = "2021"
description = "A library and CLI tool for converting MPEG-TS files to MP4 format"
license = "MIT"
repository = "https://github.com/aciddust/ts2mp4"
homepage = "https://github.com/aciddust/ts2mp4"
documentation = "https://docs.rs/ts2mp4"
keywords = ["ts", "mp4", "mpeg", "video", "converter"]
categories = ["multimedia::video", "command-line-utilities"]

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ts2mp4"
path = "src/main.rs"
